# gameproject

./: CMakeLists.txt  main.cpp
assets/shaders/: grayScaleShader.frag  invertShader.frag  oldShader.frag  pulseShader.frag
include/: Game.h  UserInput.h  Window.h
include/GameObjects/: Entity.h  GameObject.h
modules/Candle/: CMakeLists.txt
parser/: ParserAPI.hpp  parser.h  test.cpp  types.h
parser2/: mainParser.hpp  parserElem.hpp  types.h
src/: Game.cpp  Window.cpp
src/GameObjects/: Entity.cpp
tests/: CandleTest.cpp  NetWorkTest.cpp  ThorTest.cpp
tests/OpenGL/: OpenGL_main.cpp  OpenGL_shader_test.cpp
tests/OpenGL/Imgui-SFML/: imconfig-SFML.h  imgui-SFML.cpp
tests/client_data/: Client.h  Window.h  main.cpp
tests/gameNetwork3000/CLIENT/: Client.h  Window.h  main.cpp
tests/gameNetwork3000/CLIENT/PLAYER/: Camera.hpp  TransformableObj.hpp  Worm.hpp
tests/gameNetwork3000/MATH/: math.hpp
tests/gameNetwork3000/PLAYER/: Worm.cpp
tests/gameNetwork3000/SERVER/: Server.cpp  Server.h  main.cpp
tests/gameNetwork3000/SHARED/models/: Player.hpp  Segment.hpp
tests/gameNetwork3000/parser/: parser.h  test.cpp  types.h
tests/not_a_client_data/: not a client main.cpp  not a client.cpp  not a client.h  not a window.h
tests/not_a_server_data/: not a server.cpp
tests/server_data/: Server.cpp  Server.h  main.cpp
